--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^7.27.0",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
+    "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.5.0",
@@ -25,7 +26,9 @@
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
+    "react-slick": "^0.30.3",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
