--- a/package.json
+++ b/package.json
@@ -15,20 +15,25 @@
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.27.0",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tailwindcss/vite": "^4.0.7",
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "tsparticles-slim": "^2.12.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
